--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "path": "^0.12.7",
     "qs": "^6.9.4",
     "uuid": "^8.3.0"
   },
